--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,13 +4,19 @@ services:
     image: postgres:15
     container_name: ts_postgres
     restart: unless-stopped
+    # Usa as variáveis DB_* do .env para preencher as POSTGRES_*
     environment:
-      POSTGRES_USER: admin
-      POSTGRES_PASSWORD: admin
-      POSTGRES_DB: vertical_loto
+      POSTGRES_USER: ${DB_USERNAME}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_NAME}
     ports:
       - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${DB_USERNAME} -d ${DB_NAME}"]
+      interval: 5s
+      timeout: 3s
+      retries: 10
 volumes:
   pgdata:
